--- a/homework3/index.html
+++ b/homework3/index.html
@@ -29,7 +29,9 @@
   ******************************************** -->
   <body>
     <main>
-      <h1>AU National Old Bird Hall of Fame Marathon Distance</h1>
+      <header>
+        <h1>AU National Old Bird Hall of Fame Marathon Distance</h1>
+      </header>
       <table>
         <caption><a href = "https://pigeon-ndb.com/results/">Hall of Fame Marathon Records</a></caption>
       <thead>
