--- a/homework3/index.html
+++ b/homework3/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Andika">
     <link rel="stylesheet"  type="text/css" href="css/html5reset.css">
     <link rel="stylesheet"  type="text/css" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="images/pigeonicon.png"/>
