--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"/>
     <link rel="shortcut icon" type="image/png" href="images/logodesign.png"/>
+    <title>Angela Li</title>
   </head>
   <body>
     <nav>
