--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"/>
     <link rel="shortcut icon" type="image/png" href="images/logodesign.png"/>
+    <title>Angela Li</title>
   </head>
   <body>
     <nav>
