--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"/>
     <link rel="shortcut icon" type="image/png" href="images/logodesign.png"/>
-    <title>About Me</title>
   </head>
   <body>
     <nav>
@@ -14,7 +14,7 @@
         <li class="nav_item"><a href="index.html">Home</a></li>
         <li class="nav_item"><a href="work.html">Work</a></li>
         <li class="nav_item"><a href="aboutme.html">About Me</a></li>
-        <li class="nav_item"><a href="resume.html">Resume</a></li>
+        <li class="nav_item"><a href="resume.html">Contact</a></li>
       </ul>
     </nav>
   <header>
