--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -15,7 +15,7 @@
         <li class="nav_item"><a href="index.html">Home</a></li>
         <li class="nav_item"><a href="work.html">Work</a></li>
         <li class="nav_item"><a href="aboutme.html">About Me</a></li>
-        <li class="nav_item"><a href="resume.html">Resume</a></li>
+        <li class="nav_item"><a href="resume.html">Contact</a></li>
       </ul>
     </nav>
   <header>
