--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGZSMXX2NS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-TGZSMXX2NS');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
@@ -10,11 +18,12 @@
     <title>About Me</title>
   </head>
   <body>
+    <div class="skip"><a href="#aboutid">Skip to Main Content</a></div>
     <nav>
       <ul class="nav_links">
         <li class="nav_item"><a href="index.html">Home</a></li>
         <li class="nav_item"><a href="work.html">Work</a></li>
-        <li class="nav_item"><a href="aboutme.html">About Me</a></li>
+        <li class="current"><a href="aboutme.html">About Me</a></li>
         <li class="nav_item"><a href="resume.html">Contact</a></li>
       </ul>
     </nav>
@@ -26,7 +35,6 @@
     <div class="bio"> 
       <h2 id = "bios" > A Little Bit About Me!</h2>
       <p id = "biosp" >I’m currently a graduate student at University of Michigan - Ann Arbor studying information science and human-computer interaction. I’m originally from San Francisco and I received my undergraduate degree in psychology, philosophy and visual arts at Boston University. </p>
-      <p id = "biosp" >As a product designer, I take into account the business’s needs, the back-end’s needs, and the user’s needs when approaching a problem. As someone who comes from a background in psychology, I always try to understand human behaviors and what motivates a user’s decision making process. I value using different user research methods, such as A/B testings and scales to weigh different metrics, such as usability and interaction style.</p>
     </div>
 
     <p id = "drawings">In my free time, I enjoy playing chess, learning how to code, and drawing. Here are some drawings I've done!</p>
