--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGZSMXX2NS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-TGZSMXX2NS');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
@@ -10,10 +18,11 @@
     <title>Work</title>
   </head>
   <body>
+    <div class="skip"><a href="#work">Skip to Main Content</a></div>
     <nav>
       <ul class="nav_links">
         <li class="nav_item"><a href="index.html">Home</a></li>
-        <li class="nav_item"><a href="work.html">Work</a></li>
+        <li class="current"><a href="work.html">Work</a></li>
         <li class="nav_item"><a href="aboutme.html">About Me</a></li>
         <li class="nav_item"><a href="resume.html">Contact</a></li>
       </ul>
@@ -22,11 +31,73 @@
     <h1 class="header">Angela Li</h1>
   </header>
   <main class="workthingstwo" id="work" tabindex="0">
-    <div class="gallerytwo"> 
-      <img id="images1" src="images/images1.png" alt=""/>
+    <div class="gallerytwo" tabindex="0"> 
+      <div id="flip-card" tabindex="0">
+        <div id="flip-card-inner">
+          <div id="flip-card-front">
+            <img id="images1" src="images/images1.png" alt="">
+          </div>
+          <div id="flip-card-back">
+            <p>DoorDash</p>
+          </div>
+        </div>
+      </div>
+      <div id="flip-card" tabindex="0">
+        <div id="flip-card-inner">
+          <div id="flip-card-front">
+            <img id="images2" src="images/images2.png" alt="">
+          </div>
+          <div id="flip-card-back">
+            <p>Journey</p>
+          </div>
+        </div>
+      </div>
+      <div id="flip-card" tabindex="0">
+        <div id="flip-card-inner">
+          <div id="flip-card-front">
+            <img id="images3" src="images/images3.png" alt="">
+          </div>
+          <div id="flip-card-back">
+            <p>Recovery</p>
+          </div>
+        </div>
+      </div>
+      <div id="flip-card" tabindex="0">
+        <div id="flip-card-inner">
+          <div id="flip-card-front">
+            <img id="images4" src="images/images4.png" alt="">
+          </div>
+          <div id="flip-card-back">
+            <p>Digital Art</p>
+          </div>
+        </div>
+      </div>
+      <div id="flip-card" tabindex="0">
+        <div id="flip-card-inner">
+          <div id="flip-card-front">
+            <img id="images4" src="images/images5.png" alt="">
+          </div>
+          <div id="flip-card-back">
+            <p>Robinhood</p>
+          </div>
+        </div>
+      </div>
+      <div id="flip-card" tabindex="0">
+        <div id="flip-card-inner">
+          <div id="flip-card-front">
+            <img id="images4" src="images/images6.png" alt="">
+          </div>
+          <div id="flip-card-back">
+            <p>HITS</p>
+          </div>
+        </div>
+      </div>
+      <!-- <img id="images1" src="images/images1.png" alt=""/>
       <img id="images2" src="images/images2.png" alt=""/>
       <img id="images3" src="images/images3.png" alt=""/>
       <img id="images4" src="images/images4.png" alt="" />
+      <img id="images4" src="images/images5.png" alt="" />
+      <img id="images4" src="images/images6.png" alt="" />-->
     </div>
   </main>
       <footer>
