--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -33,7 +33,7 @@
   <main class="resume" id="resumephoto" tabindex="0">
     <div class="containers">  
       <p id = "biosp" >As a product designer, I take into account the business’s needs, the back-end’s needs, and the user’s needs when approaching a problem. Coming from a background in psychology, I always try to understand human behaviors and what drives a user's decision making process</p>
-      <p id = "biosp" >After working in three different psychology labs, I've gained extensive skills in data analysis and conducting qualitative research. I value using different user research methods, such as A/B testings and scales to weigh different metrics, such as usability and interaction style.</p>
+      <p id = "biospp" >After working in three different psychology labs, I've gained extensive skills in data analysis and conducting qualitative research. I value using different user research methods, such as A/B testings and scales to weigh different metrics, such as usability and interaction style.</p>
       <h1 class="sayhello">Contact Information</h1>
       <h2 class="resumecontact">I would love to chat with you! It's quarentine and I'm lonely.</h1>
       <h2 class="resumecontact">You can also contact me for a copy of my resume!</h1>
