--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -18,7 +18,9 @@
     <title>About Me</title>
   </head>
   <body>
-    <div class="skip"><a href="#aboutid">Skip to Main Content</a></div>
+    <div>
+      <a id = "skipping" tabindex="0" class="skip" href="#aboutid">Skip to Main Content</a>
+    </div>
     <nav>
       <ul class="nav_links">
         <li class="nav_item"><a href="index.html">Home</a></li>
