--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -18,7 +18,9 @@
     <title>Contact</title>
   </head>
   <body>
-    <div id = "skipping" class="skip"><a href="#resumephoto">Skip to Main Content</a></div>
+    <div>
+      <a id = "skipping" tabindex="0" class="skip" href="#resumephoto">Skip to Main Content</a>
+    </div>
     <nav>
       <ul class="nav_links">
         <li class="nav_item"><a href="index.html">Home</a></li>
