--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -18,7 +18,9 @@
     <title>Work</title>
   </head>
   <body>
-    <div class="skip"><a href="#work">Skip to Main Content</a></div>
+    <div>
+      <a id = "skipping" class="skip" tabindex="0" href="#work">Skip to Main Content</a>
+    </div>
     <nav>
       <ul class="nav_links">
         <li class="nav_item"><a href="index.html">Home</a></li>
