--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,7 +28,9 @@
       </style>
   </head>
   <body>
-    <div class="skip"><a href="#frontanimation">Skip to Main Content</a></div>
+    <div>
+      <a id = "skipping" class="skip" tabindex="0" href="#frontanimation">Skip to Main Content</a>
+    </div>
     <nav>
       <ul class="nav_links">
         <li class="current"><a href="index.html">Home</a></li>
