--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -34,62 +34,62 @@
   </header>
   <main class="workthingstwo" id="work" tabindex="0">
     <div class="gallerytwo" tabindex="0"> 
-      <div id="flip-card" tabindex="0">
-        <div id="flip-card-inner">
-          <div id="flip-card-front">
+      <div class="flip-card" tabindex="0">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
             <img id="images1" src="images/images1.png" alt="">
           </div>
-          <div id="flip-card-back">
+          <div class="flip-card-back">
             <p>DoorDash</p>
           </div>
         </div>
       </div>
-      <div id="flip-card" tabindex="0">
-        <div id="flip-card-inner">
-          <div id="flip-card-front">
+      <div class="flip-card" tabindex="0">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
             <img id="images2" src="images/images2.png" alt="">
           </div>
-          <div id="flip-card-back">
+          <div class="flip-card-back">
             <p>Journey</p>
           </div>
         </div>
       </div>
-      <div id="flip-card" tabindex="0">
-        <div id="flip-card-inner">
-          <div id="flip-card-front">
+      <div class="flip-card" tabindex="0">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
             <img id="images3" src="images/images3.png" alt="">
           </div>
-          <div id="flip-card-back">
+          <div class="flip-card-back">
             <p>Recovery</p>
           </div>
         </div>
       </div>
-      <div id="flip-card" tabindex="0">
-        <div id="flip-card-inner">
-          <div id="flip-card-front">
+      <div class="flip-card" tabindex="0">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
             <img id="images4" src="images/images4.png" alt="">
           </div>
-          <div id="flip-card-back">
+          <div class="flip-card-back">
             <p>Digital Art</p>
           </div>
         </div>
       </div>
-      <div id="flip-card" tabindex="0">
-        <div id="flip-card-inner">
-          <div id="flip-card-front">
-            <img id="images4" src="images/images5.png" alt="">
+      <div class="flip-card" tabindex="0">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img id="images5" src="images/images5.png" alt="">
           </div>
-          <div id="flip-card-back">
+          <div class="flip-card-back">
             <p>Robinhood</p>
           </div>
         </div>
       </div>
-      <div id="flip-card" tabindex="0">
-        <div id="flip-card-inner">
-          <div id="flip-card-front">
-            <img id="images4" src="images/images6.png" alt="">
+      <div class="flip-card" tabindex="0">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img id="images6" src="images/images6.png" alt="">
           </div>
-          <div id="flip-card-back">
+          <div class="flip-card-back">
             <p>HITS</p>
           </div>
         </div>
