--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -47,13 +47,17 @@
     <p id="homecontenttext">I create better experiences for users</p>
     <div class="parallax"></div>
     <div class="parallaxtext">
-    <p id="frontanimations" >Come check out my work!</p>
+      <p id="frontanimations" >Come check out my work!</p>
     </div>
     <div class="parallax"></div>
   </main>
     <footer>
       <h2 id = "contact">Let's grab coffee &#x2615; over Zoom!</h2>
       <p>angieali@umich.edu</p>
+      <div class="side-block">
+        <a href="https://www.instagram.com/ineedmypen/" class="social-icon"><img src="images/instagram.png"></a>
+        <a href="https://github.com/yzzangela"  class="social-icon"><img src="images/github.png"></a>
+      </div>
     </footer>
   </body>
 </html>
