--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -11,6 +11,7 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"/>
@@ -105,6 +106,10 @@
       <footer>
         <h2 id = "contact">Let's grab coffee &#x2615; over Zoom!</h2>
         <p>angieali@umich.edu</p>
+        <div class="side-block">
+          <a href="https://www.instagram.com/ineedmypen/" class="social-icon"><img src="images/instagram.png"></a>
+          <a href="https://github.com/yzzangela"  class="social-icon"><img src="images/github.png"></a>
+        </div>
       </footer>
   </body>
 </html>
