--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -36,10 +36,11 @@
 
     <div class="bio"> 
       <h2 id = "bios" > A Little Bit About Me!</h2>
-      <p id = "biosp" >I’m currently a graduate student at University of Michigan - Ann Arbor studying information science and human-computer interaction. I’m originally from San Francisco and I received my undergraduate degree in psychology, philosophy and visual arts at Boston University. </p>
     </div>
-
-    <p id = "drawings">In my free time, I enjoy playing chess, learning how to code, and drawing. Here are some drawings I've done!</p>
+    <p class = "drawings">In my free time, I enjoy playing chess, learning how to code, listening to music, and drawing.</p>
+    <p class = "drawings">Here's a sample of what I listen to while I work...</p>
+    <iframe id="spotify" src="https://open.spotify.com/embed/track/5ZHuyElbf1I3yNHK1MYeVJ" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <p class = "drawings"> ...and here are some drawings I've done!</p>
     <div id="gallery"> 
       <img id="image6" src="images/elephant.jpeg" alt=""/>
       <img id="image7" src="images/strawberry.jpeg" alt=""/>
@@ -56,6 +57,10 @@
     <footer>
       <h2 id = "contact">Let's grab coffee &#x2615; over Zoom!</h2>
       <p>	angieali@umich.edu</p>
+      <div class="side-block">
+        <a href="https://www.instagram.com/ineedmypen/" class="social-icon"><img src="images/instagram.png"></a>
+        <a href="https://github.com/yzzangela"  class="social-icon"><img src="images/github.png"></a>
+      </div>
     </footer>
   </body>
 </html>
