--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -34,8 +34,9 @@
   </header>
   <main class="resume" id="resumephoto" tabindex="0">
     <div class="containers">  
-      <p id = "biosp" >As a product designer, I take into account the business’s needs, the back-end’s needs, and the user’s needs when approaching a problem. Coming from a background in psychology, I always try to understand human behaviors and what drives a user's decision making process</p>
-      <p id = "biospp" >After working in three different psychology labs, I've gained extensive skills in data analysis and conducting qualitative research. I value using different user research methods, such as A/B testings and scales to weigh different metrics, such as usability and interaction style.</p>
+      <p class = "biosp" >I’m currently a graduate student at University of Michigan - Ann Arbor studying information science and human-computer interaction. I’m originally from San Francisco and I received my undergraduate degree in psychology, philosophy and visual arts at Boston University. </p>
+      <p class = "biosp" >As a product designer, I take into account the business’s needs, the back-end’s needs, and the user’s needs when approaching a problem. Coming from a background in psychology, I always try to understand human behaviors and what drives a user's decision making process</p>
+      <p class = "biosp" >After working in three different psychology labs, I've gained extensive skills in data analysis and conducting qualitative research. I value using different user research methods, such as A/B testings and scales to weigh different metrics, such as usability and interaction style.</p>
       <h1 class="sayhello">Contact Information</h1>
       <h2 class="resumecontact">I would love to chat with you! It's quarentine and I'm lonely.</h1>
       <h2 class="resumecontact">You can also contact me for a copy of my resume!</h1>
@@ -43,27 +44,49 @@
     <div class="container">
       <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mvovwoyr" method="post">
         <fieldset id="fs-frm-inputs">
-          <div class="containername">
-            <label class = "names" for="full-name">Full Name</label>
-            <input class = "name" type="text" name="name" id="full-name" placeholder="First and Last" required="">
+
+          <div class="containernames">
+            <div class="containername">
+              <label class = "names" for="full-name">Full Name</label>
+            </div>
+            <div class="containername">
+              <input class = "name" type="text" name="name" id="full-name" placeholder="First and Last" required="">
+            </div>
           </div>
-          <div class="containeremail">
-            <label class = "emails" for="email-address">Email Address</label>
-            <input class = "email" type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
+
+          <div class="containeremails">
+            <div class="containeremail">
+              <label class = "emails" for="email-address">Email Address</label>
+            </div>
+            <div class="containeremail">
+              <input class = "email" type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
+            </div>
           </div>
-          <div class="containeremail">
-            <label class = "messages" for="message">Message</label>
-          <textarea class = "message" rows="5" name="message" id="message" placeholder="Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor." required=""></textarea>
-          <input class = "message" type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+
+          <div class="containermessages">
+            <div class="containeremail">
+              <label class = "messages" for="message">Message</label>
+            </div>
+            <div class="containeremail">
+            <textarea class = "message" rows="5" name="message" id="message" placeholder="Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor." required=""></textarea>
+            <input class = "message" type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+            </div>
           </div>
+
         </fieldset>
-        <input class = "button" type="submit" value="Submit">
+        <div class="submitbutton">
+          <input class = "button" type="submit" value="Submit">
+        </div>
       </form>
     </div>
   </main>
     <footer>
       <h2 id = "contact">Let's grab coffee &#x2615; over Zoom!</h2>
       <p>angieali@umich.edu</p>
+      <div class="side-block">
+        <a href="https://www.instagram.com/ineedmypen/" class="social-icon"><img src="images/instagram.png"></a>
+        <a href="https://github.com/yzzangela"  class="social-icon"><img src="images/github.png"></a>
+      </div>
     </footer>
   </body>
 </html>
