--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -55,8 +55,8 @@
       <h2 id = "contact">Let's grab coffee &#x2615; over Zoom!</h2>
       <p>angieali@umich.edu</p>
       <div class="side-block">
-        <a href="https://www.instagram.com/ineedmypen/" class="social-icon"><img src="images/instagram.png"></a>
-        <a href="https://github.com/yzzangela"  class="social-icon"><img src="images/github.png"></a>
+        <a href="https://www.instagram.com/ineedmypen/" aria-label="Click for Instagram" class="social-icon"><img src="images/instagram.png" alt="Instagram link"></a>
+        <a href="https://github.com/yzzangela"  aria-label="Click for Github" class="social-icon"><img src="images/github.png" alt="Github link"></a>
       </div>
     </footer>
   </body>
