--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -34,6 +34,9 @@
   </header>
   <main class="resume" id="resumephoto" tabindex="0">
     <div class="containers">  
+      <div class="bio"> 
+        <h2 id = "bioss"> Work Background</h2>
+      </div>
       <p class = "biosp" >I’m currently a graduate student at University of Michigan - Ann Arbor studying information science and human-computer interaction. I’m originally from San Francisco and I received my undergraduate degree in psychology, philosophy and visual arts at Boston University. </p>
       <p class = "biosp" >As a product designer, I take into account the business’s needs, the back-end’s needs, and the user’s needs when approaching a problem. Coming from a background in psychology, I always try to understand human behaviors and what drives a user's decision making process</p>
       <p class = "biosp" >After working in three different psychology labs, I've gained extensive skills in data analysis and conducting qualitative research. I value using different user research methods, such as A/B testings and scales to weigh different metrics, such as usability and interaction style.</p>
@@ -84,8 +87,8 @@
       <h2 id = "contact">Let's grab coffee &#x2615; over Zoom!</h2>
       <p>angieali@umich.edu</p>
       <div class="side-block">
-        <a href="https://www.instagram.com/ineedmypen/" class="social-icon"><img src="images/instagram.png"></a>
-        <a href="https://github.com/yzzangela"  class="social-icon"><img src="images/github.png"></a>
+        <a href="https://www.instagram.com/ineedmypen/" aria-label="Click for Instagram" class="social-icon"><img src="images/instagram.png" alt="Instagram link"></a>
+        <a href="https://github.com/yzzangela"  aria-label="Click for Github" class="social-icon"><img src="images/github.png" alt="Github link"></a>
       </div>
     </footer>
   </body>
