--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -10,7 +10,7 @@
       gtag('config', 'G-TGZSMXX2NS');
     </script>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1.0, minimum-scale=1.0, maximum-scale=1.0"> 
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"/>
@@ -39,7 +39,7 @@
     </div>
     <p class = "drawings">In my free time, I enjoy playing chess, learning how to code, listening to music, and drawing.</p>
     <p class = "drawings">Here's a sample of what I listen to while I work...</p>
-    <iframe id="spotify" src="https://open.spotify.com/embed/track/5ZHuyElbf1I3yNHK1MYeVJ" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <iframe id="spotify" aria-label="Listen to Spotify" src="https://open.spotify.com/embed/track/5ZHuyElbf1I3yNHK1MYeVJ" width="300" height="80" role="Spotify" frameborder="0" allow="encrypted-media"></iframe>
     <p class = "drawings"> ...and here are some drawings I've done!</p>
     <div id="gallery"> 
       <img id="image6" src="images/elephant.jpeg" alt=""/>
@@ -58,8 +58,8 @@
       <h2 id = "contact">Let's grab coffee &#x2615; over Zoom!</h2>
       <p>	angieali@umich.edu</p>
       <div class="side-block">
-        <a href="https://www.instagram.com/ineedmypen/" class="social-icon"><img src="images/instagram.png"></a>
-        <a href="https://github.com/yzzangela"  class="social-icon"><img src="images/github.png"></a>
+        <a href="https://www.instagram.com/ineedmypen/" aria-label="Click for Instagram" class="social-icon"><img src="images/instagram.png" alt="Instagram link"></a>
+        <a href="https://github.com/yzzangela"  aria-label="Click for Github" class="social-icon"><img src="images/github.png" alt="Github link"></a>
       </div>
     </footer>
   </body>
