--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -10,7 +10,7 @@
       gtag('config', 'G-TGZSMXX2NS');
     </script>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1.0, minimum-scale=1.0, maximum-scale=1.0"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0"> 
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"/>
@@ -39,7 +39,9 @@
     </div>
     <p class = "drawings">In my free time, I enjoy playing chess, learning how to code, listening to music, and drawing.</p>
     <p class = "drawings">Here's a sample of what I listen to while I work...</p>
-    <iframe id="spotify" aria-label="Listen to Spotify" src="https://open.spotify.com/embed/track/5ZHuyElbf1I3yNHK1MYeVJ" width="300" height="80" role="Spotify" frameborder="0" allow="encrypted-media"></iframe>
+    <div class="spotify"> 
+      <iframe id="spotify" aria-label="spotify" src="https://open.spotify.com/embed/track/5ZHuyElbf1I3yNHK1MYeVJ" width="300" height="80" role="spotify" frameborder="0" allow="encrypted-media"></iframe>
+    </div>
     <p class = "drawings"> ...and here are some drawings I've done!</p>
     <div id="gallery"> 
       <img id="image6" src="images/elephant.jpeg" alt=""/>
