--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -34,14 +34,16 @@
   </header>
   <main class="about" id="aboutid" tabindex="0">
 
-    <div class="bio"> 
+    <div class="bio" aria-label="spotify"> 
       <h2 id = "bios" > A Little Bit About Me!</h2>
     </div>
-    <p class = "drawings">In my free time, I enjoy playing chess, learning how to code, listening to music, and drawing.</p>
-    <p class = "drawings">Here's a sample of what I listen to while I work...</p>
-    <div class="spotify"> 
+      <p class = "drawings">In my free time, I enjoy playing chess, learning how to code, listening to music, and drawing.</p>
+      <p class = "drawings">Here's a sample of what I listen to while I work...</p>
+    
+    <div class="spotify" role="spotify" aria-label="spotify"> 
       <iframe id="spotify" aria-label="spotify" src="https://open.spotify.com/embed/track/5ZHuyElbf1I3yNHK1MYeVJ" width="300" height="80" role="spotify" frameborder="0" allow="encrypted-media"></iframe>
     </div>
+
     <p class = "drawings"> ...and here are some drawings I've done!</p>
     <div id="gallery"> 
       <img id="image6" src="images/elephant.jpeg" alt=""/>
