--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -10,7 +10,7 @@
       gtag('config', 'G-TGZSMXX2NS');
     </script>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=500%"> 
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"/>
@@ -29,35 +29,37 @@
         <li class="nav_item"><a href="resume.html">Contact</a></li>
       </ul>
     </nav>
-  <header>
-    <h1 class="header">Angela Li</h1>
-  </header>
-  <main class="about" id="aboutid" tabindex="0">
+    <header>
+      <h1 class="header">Angela Li</h1>
+    </header>
+    <main class="about" id="aboutid" tabindex="0">
 
-    <div class="bio" aria-label="spotify"> 
-      <h2 id = "bios" > A Little Bit About Me!</h2>
-    </div>
+      <div class="bio" aria-label="spotify"> 
+        <h2 id = "bios" > A Little Bit About Me!</h2>
+      </div>
+
       <p class = "drawings">In my free time, I enjoy playing chess, learning how to code, listening to music, and drawing.</p>
       <p class = "drawings">Here's a sample of what I listen to while I work...</p>
-    
-    <div class="spotify" role="spotify" aria-labelledby="spotify"> 
-      <iframe id="spotify" aria-labelledby="spotify" src="https://open.spotify.com/embed/track/5ZHuyElbf1I3yNHK1MYeVJ" width="300" height="80" role="spotify" frameborder="0" allow="encrypted-media"></iframe>
-    </div>
+      
+      <div class="spotify" role="spotify" aria-labelledby="spotify"> 
+        <iframe id="spotify" aria-labelledby="spotify" src="https://open.spotify.com/embed/track/5ZHuyElbf1I3yNHK1MYeVJ" width="300" height="80" role="spotify" frameborder="0" allow="encrypted-media"></iframe>
+      </div>
 
-    <p class = "drawings"> ...and here are some drawings I've done!</p>
-    <div id="gallery"> 
-      <img id="image6" src="images/elephant.jpeg" alt=""/>
-      <img id="image7" src="images/strawberry.jpeg" alt=""/>
-      <img id="image8" src="images/butterfly.jpeg" alt=""/>
-      <img id="image3" src="images/tiger.jpeg" alt=""/>
-      <img id="image2" src="images/greengoblin.jpeg" alt=""/>
-      <img id="image5" src="images/dogballoon.jpeg" alt=""/>
-      <img id="image9" src="images/bottle.jpeg" alt=""/>
-      <img id="image4" src="images/balloon.jpeg" alt="" />
-      <img id="image1" src="images/balloondog.jpeg" alt=""/>
-    </div>
+      <p class = "drawings"> ...and here are some drawings I've done!</p>
 
-  </main>
+      <div id="gallery"> 
+        <img id="image6" src="images/elephant.jpeg" alt=""/>
+        <img id="image7" src="images/strawberry.jpeg" alt=""/>
+        <img id="image8" src="images/butterfly.jpeg" alt=""/>
+        <img id="image3" src="images/tiger.jpeg" alt=""/>
+        <img id="image2" src="images/greengoblin.jpeg" alt=""/>
+        <img id="image5" src="images/dogballoon.jpeg" alt=""/>
+        <img id="image9" src="images/bottle.jpeg" alt=""/>
+        <img id="image4" src="images/balloon.jpeg" alt="" />
+        <img id="image1" src="images/balloondog.jpeg" alt=""/>
+      </div>
+
+    </main>
     <footer>
       <h2 id = "contact">Let's grab coffee &#x2615; over Zoom!</h2>
       <p>	angieali@umich.edu</p>
