--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -38,15 +38,7 @@
         <h2 id = "bios" > A Little Bit About Me!</h2>
       </div>
 
-      <p class = "drawings">In my free time, I enjoy playing chess, learning how to code, listening to music, and drawing.</p>
-      <p class = "drawings">Here's a sample of what I listen to while I work...</p>
-      
-      <div class="spotify" role="spotify" aria-labelledby="spotify"> 
-        <iframe id="spotify" aria-labelledby="spotify" src="https://open.spotify.com/embed/track/5ZHuyElbf1I3yNHK1MYeVJ" width="300" height="80" role="spotify" frameborder="0" allow="encrypted-media"></iframe>
-      </div>
-
-      <p class = "drawings"> ...and here are some drawings I've done!</p>
-
+      <p class = "drawings">In my free time, I enjoy playing chess, learning how to code, listening to music, and drawing. Here's some artwork that I've done!</p>
       <div id="gallery"> 
         <img id="image6" src="images/elephant.jpeg" alt=""/>
         <img id="image7" src="images/strawberry.jpeg" alt=""/>
