--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -40,15 +40,15 @@
 
       <p class = "drawings">In my free time, I enjoy playing chess, learning how to code, listening to music, and drawing. Here's some artwork that I've done!</p>
       <div id="gallery"> 
-        <img id="image6" src="images/elephant.jpeg" alt=""/>
-        <img id="image7" src="images/strawberry.jpeg" alt=""/>
-        <img id="image8" src="images/butterfly.jpeg" alt=""/>
-        <img id="image3" src="images/tiger.jpeg" alt=""/>
-        <img id="image2" src="images/greengoblin.jpeg" alt=""/>
-        <img id="image5" src="images/dogballoon.jpeg" alt=""/>
-        <img id="image9" src="images/bottle.jpeg" alt=""/>
-        <img id="image4" src="images/balloon.jpeg" alt="" />
-        <img id="image1" src="images/balloondog.jpeg" alt=""/>
+        <img id="image6" src="images/elephant.jpeg" alt="A picture of an elephant"/>
+        <img id="image7" src="images/strawberry.jpeg" alt="A picture of a strawberry covered in chocolate"/>
+        <img id="image8" src="images/butterfly.jpeg" alt="A picture of a butterfly"/>
+        <img id="image3" src="images/tiger.jpeg" alt="A picture of a tiger"/>
+        <img id="image2" src="images/greengoblin.jpeg" alt="A picture of green goblin from spiderman"/>
+        <img id="image5" src="images/dogballoon.jpeg" alt="A picture of a balloon dog"/>
+        <img id="image9" src="images/bottle.jpeg" alt="A picture of a glass bottle"/>
+        <img id="image4" src="images/balloon.jpeg" alt="A picture of a balloon" />
+        <img id="image1" src="images/balloondog.jpeg" alt="A picture of a balloon dog"/>
       </div>
 
     </main>
