--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -38,7 +38,7 @@
       <div class="flip-card" tabindex="0">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img id="images1" src="images/images1.png" alt="">
+            <img id="images1" src="images/images1.png" alt="Doordash">
           </div>
           <div class="flip-card-back">
             <p>DoorDash</p>
@@ -48,7 +48,7 @@
       <div class="flip-card" tabindex="0">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img id="images2" src="images/images2.png" alt="">
+            <img id="images2" src="images/images2.png" alt="Journey">
           </div>
           <div class="flip-card-back">
             <p>Journey</p>
@@ -58,7 +58,7 @@
       <div class="flip-card" tabindex="0">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img id="images3" src="images/images3.png" alt="">
+            <img id="images3" src="images/images3.png" alt="Recovery">
           </div>
           <div class="flip-card-back">
             <p>Recovery</p>
@@ -68,7 +68,7 @@
       <div class="flip-card" tabindex="0">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img id="images4" src="images/images4.png" alt="">
+            <img id="images4" src="images/images4.png" alt="Digital art">
           </div>
           <div class="flip-card-back">
             <p>Digital Art</p>
@@ -78,7 +78,7 @@
       <div class="flip-card" tabindex="0">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img id="images5" src="images/images5.png" alt="">
+            <img id="images5" src="images/images5.png" alt="Robinhood">
           </div>
           <div class="flip-card-back">
             <p>Robinhood</p>
@@ -88,7 +88,7 @@
       <div class="flip-card" tabindex="0">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img id="images6" src="images/images6.png" alt="">
+            <img id="images6" src="images/images6.png" alt="HITS">
           </div>
           <div class="flip-card-back">
             <p>HITS</p>
