--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -102,7 +102,7 @@
       <img id="images4" src="images/images5.png" alt="" />
       <img id="images4" src="images/images6.png" alt="" />-->
     </div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/7jovuOhHcC8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class= "youtube" width="560" height="315" src="https://www.youtube.com/embed/7jovuOhHcC8" title="Intentionally blank" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </main>
       <footer>
         <h2 id = "contact">Let's grab coffee &#x2615; over Zoom!</h2>
