--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -34,6 +34,7 @@
     <h1 class="header">Angela Li</h1>
   </header>
   <main class="workthingstwo" id="work" tabindex="0">
+    <iframe class = "spotify" src="https://open.spotify.com/embed/track/5ZHuyElbf1I3yNHK1MYeVJ" title = "spotify" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     <div class="gallerytwo" tabindex="0"> 
       <div class="flip-card" tabindex="0">
         <div class="flip-card-inner">
@@ -102,7 +103,6 @@
       <img id="images4" src="images/images5.png" alt="" />
       <img id="images4" src="images/images6.png" alt="" />-->
     </div>
-    <iframe class= "youtube" width="560" height="315" src="https://www.youtube.com/embed/7jovuOhHcC8" title="Intentionally blank" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </main>
       <footer>
         <h2 id = "contact">Let's grab coffee &#x2615; over Zoom!</h2>
