--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -44,7 +44,7 @@
         <div class="seratonin"> 
         <button id="dogbutton">Get some Seratonin!</button>
         </div>
-      <img style="height: 250px;" id="dogs" alt = "dogs" src="https://placecorgi.com/250">
+      <img style="height: 250px;" id="dogs" alt = "dogs" src="https://images.dog.ceo/breeds/australian-shepherd/leroy.jpg">
       <script>
         async function getDoggo(event) {
           const res = await fetch("https://dog.ceo/api/breeds/image/random");
