--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -38,7 +38,7 @@
         <h2 id = "bios" > A Little Bit About Me!</h2>
       </div>
 
-      <p class = "drawings">In my free time, I enjoy playing chess, learning how to code, listening to music, and drawing. Here's some artwork that I've done!</p>
+      <p class = "drawings">In my free time, I enjoy playing chess, learning how to code, drawing and searching up dog pictures to increase my seratonin.</p>
       
       <div class="seratonin"> 
         <div class="seratonin"> 
@@ -56,6 +56,7 @@
       </script>
     </div>
       
+      <p class = "drawings">Here's some artwork that I've done!</p>
       <div id="gallery"> 
         <img id="image6" src="images/elephant.jpeg" alt="A picture of an elephant"/>
         <img id="image7" src="images/strawberry.jpeg" alt="A picture of a strawberry covered in chocolate"/>
