--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -38,7 +38,7 @@
         <h2 id = "bios" > A Little Bit About Me!</h2>
       </div>
 
-      <p class = "drawings">In my free time, I enjoy playing chess, learning how to code, drawing and searching up dog pictures to increase my seratonin.</p>
+      <p class = "drawings">In my free time, I enjoy playing chess, learning how to code, drawing and searching up dog pictures to increase my seratonin levels.</p>
       
       <div class="seratonin"> 
         <div class="seratonin"> 
